Added API call for game stores, added available stores on Game component which are clickable and will link to the appropriate store, styled store section on Game component, fixed issue on refresh where the game you selected is not stored resulting in a game not found page.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /build
 
 # misc
+.VSCodeCounter
 .DS_Store
 .env
 .env.local
@@ -25,3 +26,4 @@ yarn-error.log*
 
 reportWebVitals.js
 setupTests.js
+
